--- a/Home/Home.html
+++ b/Home/Home.html
@@ -186,7 +186,10 @@ Shop</i>
   <table class="w3-table-all">
     <thead>
       <tr class="w3-pink">
-        <th><img src="1.jpg" style="width: 100%; height: auto;"></th>
+        <th><video controls>
+    <source src="https://www.youtube.com/watch?v=3mAoYCwGilY" style="width: 100%; height: auto;" type="video/mp4">
+    Your browser does not support the video tag.
+  </video></th>
       </tr>
     </thead>
     <tbody>
@@ -210,7 +213,10 @@ Shop</i>
   <table class="w3-table-all">
     <thead>
       <tr class="w3-pink">
-        <th><img src="2.jpg" style="width: 100%; height: auto;"></th>
+        <th><video controls>
+    <source src="https://www.youtube.com/watch?v=FeLXaBgJ9Qg" type="video/mp4">
+    Your browser does not support the video tag.
+  </video></th>
       </tr>
     </thead>
     <tbody>
@@ -233,7 +239,10 @@ Shop</i>
   <table class="w3-table-all">
     <thead>
       <tr class="w3-pink">
-        <th><img src="3.jpg" style="width: 100%; height: auto;"></th>
+        <th><video controls>
+    <source src="https://www.youtube.com/watch?v=5dU4alkHAO4" style="width: 100%; height: auto;" type="video/mp4">
+    Your browser does not support the video tag.
+  </video></th>
       </tr>
     </thead>
     <tbody>
