--- a/Home/Home.html
+++ b/Home/Home.html
@@ -186,10 +186,7 @@ Shop</i>
   <table class="w3-table-all">
     <thead>
       <tr class="w3-pink">
-        <th><video controls>
-    <source src="https://www.youtube.com/watch?v=3mAoYCwGilY" style="width: 100%; height: auto;" type="video/mp4">
-    Your browser does not support the video tag.
-  </video></th>
+        <th><iframe width="560" height="315" src="https://www.youtube.com/embed/YtPyooIASMs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></th>
       </tr>
     </thead>
     <tbody>
@@ -213,10 +210,7 @@ Shop</i>
   <table class="w3-table-all">
     <thead>
       <tr class="w3-pink">
-        <th><video controls>
-    <source src="https://www.youtube.com/watch?v=FeLXaBgJ9Qg" type="video/mp4">
-    Your browser does not support the video tag.
-  </video></th>
+        <th><iframe width="560" height="315" src="https://www.youtube.com/embed/FeLXaBgJ9Qg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></th>
       </tr>
     </thead>
     <tbody>
@@ -239,10 +233,7 @@ Shop</i>
   <table class="w3-table-all">
     <thead>
       <tr class="w3-pink">
-        <th><video controls>
-    <source src="https://www.youtube.com/watch?v=5dU4alkHAO4" style="width: 100%; height: auto;" type="video/mp4">
-    Your browser does not support the video tag.
-  </video></th>
+        <th><iframe width="560" height="315" src="https://www.youtube.com/embed/5dU4alkHAO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></th>
       </tr>
     </thead>
     <tbody>
