--- a/Home/Home.html
+++ b/Home/Home.html
@@ -152,7 +152,7 @@ Shop</i>
 
 <!-- Bg Music -->
 <div class="w3-right">
-  <audio id="myAudio" src="C:\Users\magba\OneDrive\Desktop\Barbie Merchandise\Home\Barbie in the 12 Dancing Princesses  Opening Theme Extended.mp3" loop>
+  <audio id="myAudio" src="Barbie in the 12 Dancing Princesses  Opening Theme Extended.mp3" loop>
     Your browser does not support the audio element.
   </audio>
 
